--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hi, my name is SirDeathScythe.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Crazy Portfolio</title>
+</head>
+<body>
+    <h1>Pumpkins on Halloween</h1>
+    <p>Hello Everyone.</p>
+</body>
+</html>
