--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Crazy Portfolio</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Pumpkins on Halloween</h1>
-    <p>Hello Everyone.</p>
-</body>
+    <p>Hello there.</p>
+    <img
+      src="img/20210920 Osipow John Digital Perspective Project.jpg"
+      alt="Looking over an unknown horizon."
+    />
+  </body>
 </html>
