--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>My Crazy Portfolio</title>
   </head>
   <body>
-    <h1>Pumpkins on Halloween</h1>
+    <h1>Work in progress</h1>
     <p>Hello there.</p>
     <img
-      src="img/20210920 Osipow John Digital Perspective Project.jpg"
+      src="Img/20210920 Osipow John Digital Perspective Project.jpg"
       alt="Looking over an unknown horizon."
     />
   </body>
