added more code to css and html

--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Crazy Portfolio</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <header class="hero-box">
+      <section class="hero-Img-box">
+        <img
+          class="hero-Img"
+          src="Img/20210920 Osipow John Digital Perspective Project.jpg"
+          alt="Looking over an unknown horizon."
+        />
+      </section>
+    </header>
+
     <h1>Work in progress</h1>
     <p>Hello there.</p>
-    <img
-      src="Img/20210920 Osipow John Digital Perspective Project.jpg"
-      alt="Looking over an unknown horizon."
-    />
+    <p class="myColor">I have a class and I am Red</p>
+    <p class="myColorTwo">This is another class that makes Blue</p>
   </body>
 </html>
