--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
           alt="Looking over an unknown horizon."
         />
       </section>
+      <section class="hero-text-box">
+        <h1 clas="hero-heading">Work in progress</h1>
+        <p class="hero-text">I have a class that makes me Red</p>
+      </section>
     </header>
-
-    <h1>Work in progress</h1>
-    <p>Hello there.</p>
-    <p class="myColor">I have a class and I am Red</p>
-    <p class="myColorTwo">This is another class that makes Blue</p>
   </body>
 </html>
