Added Overlay and mobile styles

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   </head>
   <body>
     <header class="hero-box">
-      <section class="hero-Img-box">
+      <section class="hero-image-box">
         <img
-          class="hero-Img"
+          class="hero-image"
           src="Img/20210920 Osipow John Digital Perspective Project.jpg"
           alt="Looking over an unknown horizon."
         />
       </section>
       <section class="hero-text-box">
-        <h1 clas="hero-heading">Work in progress</h1>
+        <h1 class="hero-heading">Work in progress</h1>
         <p class="hero-text">I have a class that makes me Red</p>
       </section>
     </header>
