--- a/index.html
+++ b/index.html
@@ -18,8 +18,67 @@
       </section>
       <section class="hero-text-box">
         <h1 class="hero-heading">Work in progress</h1>
-        <p class="hero-text">I have a class that makes me Red</p>
+        <p class="hero-text">Nothing awesome here yet</p>
       </section>
     </header>
+    <!-- Begin Portfolio Gallery-->
+    <section class="portfolio-gallery">
+      <h1>Portfolio</h1>
+      <div class="gallery-item">
+        <a class="glightbox" href="img/Flower 1.JPG">
+          <img
+            class="gallery-img"
+            src="img/Flower 1.JPG"
+            alt="close up of pink rose"
+          />
+        </a>
+      </div>
+      <div class="gallery-item">
+        <a class="glightbox" href="img/Flower 2.JPG">
+          <img
+            class="gallery-img"
+            src="img/Flower 2.JPG"
+            alt="close up of puerple flowers"
+          />
+        </a>
+      </div>
+      <div class="gallery-item">
+        <a class="glightbox" href="img/Flower 3.jpg">
+          <img
+            class="gallery-img"
+            src="img/Flower 3.jpg"
+            alt="black and white lettuce"
+          />
+        </a>
+      </div>
+      <div class="gallery-item">
+        <a class="glightbox" href="img/Flower 4.jpg">
+          <img
+            class="gallery-img"
+            src="img/Flower 4.jpg"
+            alt="bumble bee in a rose"
+          />
+        </a>
+      </div>
+      <div class="gallery-item">
+        <a class="glightbox" href="img/Flower 5.jpg">
+          <img class="gallery-img" src="img/Flower 5.jpg" alt="small clovers" />
+        </a>
+      </div>
+      <div class="gallery-item">
+        <a class="glightbox" href="img/Flower 6.jpg">
+          <img class="gallery-img" src="img/Flower 6.jpg" alt="winding leafs" />
+        </a>
+      </div>
+      <div class="gallery-item">
+        <a class="glightbox" href="img/Flower 7.jpg">
+          <img
+            class="gallery-img"
+            src="img/Flower 7.jpg"
+            alt="flowing peones"
+          />
+        </a>
+      </div>
+    </section>
   </body>
 </html>
