--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <img
               class="gallery-img"
               src="img/Flower 2.JPG"
-              alt="close up of puerple flowers"
+              alt="close up of purple flowers"
             />
           </a>
         </div>
