Added about me and video

--- a/index.html
+++ b/index.html
@@ -7,15 +7,23 @@
     <title>My Crazy Portfolio</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/glightbox.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
   </head>
   <body>
     <header class="hero-box">
       <section class="hero-image-box">
-        <img
+        <!--<img
           class="hero-image"
           src="Img/20210920 Osipow John Digital Perspective Project.jpg"
           alt="Looking over an unknown horizon."
-        />
+        /> -->
+        <video
+          src="video/Look at this thing reencoded.mp4"
+          class="hero-video"
+          autoplay
+          muted
+          loop
+        ></video>
       </section>
       <section class="hero-text-box">
         <h1 class="hero-heading">Work in progress</h1>
@@ -115,6 +123,42 @@
               alt="flowing peones"
           /></a>
         </div>
+      </section>
+    </section>
+    <!--Begin About Section-->
+    <section class="about-container">
+      <section class="about-text">
+        <h1>Special ideas originate here</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque tempora
+          eum repudiandae unde alias mollitia velit hic dicta veritatis. Facilis
+          error molestiae vero corrupti laboriosam.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores odio
+          deleniti qui culpa omnis doloremque placeat consequuntur?
+        </p>
+        <p>
+          <a href="mailto:jcosipow@student.cia.edu">Email John</a> at
+          jcosipow@student.cia.edu
+        </p>
+        <section class="about-social">
+          <a
+            href="https://instagram.com/sir_deathscythe"
+            aria-label="Link to instagram"
+          >
+            <i class="fab fa-instagram" aria-hidden="true"></i>
+          </a>
+          <a
+            href="https://github.com/sirdeathscythe"
+            aria-label="Link to instagram"
+          >
+            <i class="fab fa-github" aria-hidden="true"></i>
+          </a>
+        </section>
+      </section>
+      <section class="about-image">
+        <img src="/Img/Identity.jpg" alt="Parts that make me" />
       </section>
     </section>
     <script src="js/glightbox.min.js"></script>
