Added Foundation Images

--- a/index.html
+++ b/index.html
@@ -124,7 +124,75 @@
           /></a>
         </div>
       </section>
+      <!-- end . portfolio-gallery-->
+      <h1>Foundation Portfolio</h1>
+      <section class="portfolio-gallery">
+        <div class="gallery-item">
+          <a class="glightbox" href="img/Osipow John 2D Sky Shot.jpg">
+            <img
+              class="gallery-img"
+              src="img/Osipow John 2D Sky Shot.jpg"
+              alt="Black and White Sun"
+          /></a>
+        </div>
+
+        <div class="gallery-item">
+          <a class="glightbox" href="Img/Osipow John 2D Wave Pattern (2).jpg">
+            <img
+              class="gallery-img"
+              src="img/Osipow John 2D Wave Pattern (2).jpg"
+              alt="Ever Flowing Waves"
+          /></a>
+        </div>
+
+        <div class="gallery-item">
+          <a
+            class="glightbox"
+            href="img/Osipow John Animation Character Layout.jpg"
+          >
+            <img
+              class="gallery-img"
+              src="img/Osipow John Animation Character Layout.jpg"
+              alt="Saisei Character Layout"
+          /></a>
+        </div>
+
+        <div class="gallery-item">
+          <a
+            class="glightbox"
+            href="img/Osipow John Animation Walk In Frame 2.jpg"
+          >
+            <img
+              class="gallery-img"
+              src="img/Osipow John Animation Walk In Frame 2.jpg"
+              alt="Angry Walk In Frame"
+          /></a>
+        </div>
+
+        <div class="gallery-item">
+          <a class="glightbox" href="img/OSipow John Observational Colors.jpg">
+            <img
+              class="gallery-img"
+              src="img/OSipow John Observational Colors.jpg"
+              alt="A Woman With Color"
+          /></a>
+        </div>
+
+        <div class="gallery-item">
+          <a
+            class="glightbox"
+            href="img/Osipow John Observational Black and White Bones.jpg"
+          >
+            <img
+              class="gallery-img"
+              src="img/Osipow John Observational Black and White Bones.jpg"
+              alt="A Bone On Cloth"
+          /></a>
+        </div>
+      </section>
+      <!-- end. portfolio-gallery-->
     </section>
+    <!-- end .portfolio-container-->
     <!--Begin About Section-->
     <section class="about-container">
       <section class="about-text">
