--- a/index.html
+++ b/index.html
@@ -10,6 +10,32 @@
     <link rel="stylesheet" href="css/all.min.css" />
   </head>
   <body>
+    <!-- Begin Navigation-->
+    <nav class="nav-bar top-nav">
+      <h1 class="logo"><a href="index.html">Sir DeathScythe</a></h1>
+      <ul class="nav-menu">
+        <li class="nav-item"><a href="#portfolio">Portfolio</a></li>
+        <li class="nav-item"><a href="#about">About</a></li>
+        <li class="nav-item social-nav-item">
+          <a
+            href="https://instagram.com/sir_deathscythe"
+            aria-label="Link to instagram"
+          >
+            <i class="fab fa-instagram" aria-hidden="true"></i
+          ></a>
+        </li>
+
+        <li class="nav-item social-nav-item">
+          <a
+            href="https://github.com/sirdeathscythe"
+            aria-label="Link to github"
+          >
+            <i class="fab fa-github" aria-hidden="true"></i
+          ></a>
+        </li>
+      </ul>
+    </nav>
+    <!-- End Navigation-->
     <header class="hero-box">
       <section class="hero-image-box">
         <!--<img
@@ -219,7 +245,7 @@
           </a>
           <a
             href="https://github.com/sirdeathscythe"
-            aria-label="Link to instagram"
+            aria-label="Link to Github"
           >
             <i class="fab fa-github" aria-hidden="true"></i>
           </a>
