Finished up Nav bar for phones, tablets, computers

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </section>
     </header>
     <!-- Begin Portfolio Gallery-->
-    <section class="portfolio-container">
+    <section class="portfolio-container section-scroll" id="portfolio">
       <h1>Portfolio</h1>
       <section class="portfolio-gallery">
         <div class="gallery-item">
@@ -220,7 +220,7 @@
     </section>
     <!-- end .portfolio-container-->
     <!--Begin About Section-->
-    <section class="about-container">
+    <section class="about-container section-scroll" id="about">
       <section class="about-text">
         <h1>Special ideas originate here</h1>
         <p>
