Fixed Navigation bar scroll

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <!-- Begin Navigation-->
-    <nav class="nav-bar top-nav">
+    <nav class="nav-bar top-nav" id="top-nav-bar">
       <h1 class="logo"><a href="index.html">Sir DeathScythe</a></h1>
       <ul class="nav-menu">
         <li class="nav-item"><a href="#portfolio">Portfolio</a></li>
@@ -258,6 +258,21 @@
     <script src="js/glightbox.min.js"></script>
     <script type="text/javascript">
       const lightbox = GLightbox({ loop: true });
+
+      window.onscroll = function () {
+        scrollFunction();
+      };
+
+      function scrollFunction() {
+        if (
+          document.body.scrollTop > 20 ||
+          document.documentElement.scrollTop > 20
+        ) {
+          document.getElementById("top-nav-bar").style.background = "#000000";
+        } else {
+          document.getElementById("top-nav-bar").style.background = "none";
+        }
+      }
     </script>
   </body>
 </html>
