Changed color of nav-bar to light low grey

--- a/index.html
+++ b/index.html
@@ -268,7 +268,8 @@
           document.body.scrollTop > 20 ||
           document.documentElement.scrollTop > 20
         ) {
-          document.getElementById("top-nav-bar").style.background = "#000000";
+          document.getElementById("top-nav-bar").style.background =
+            "rgba(0,0,0,0.4)";
         } else {
           document.getElementById("top-nav-bar").style.background = "none";
         }
