Adding two digital art pieces soon

--- a/index.html
+++ b/index.html
@@ -215,7 +215,34 @@
               alt="A Bone On Cloth"
           /></a>
         </div>
-      </section>
+
+        <!-- Add two images from time at digital class BELOW-->
+
+        <!-- Below is the code for the two new images
+        <div class="gallery-item">
+          <a
+            class="glightbox"
+            href=""
+          >
+            <img
+              class="gallery-img"
+              src=""
+              alt=""
+          /></a>
+        </div>
+
+        <div class="gallery-item">
+          <a
+            class="glightbox"
+            href=""
+          >
+            <img
+              class="gallery-img"
+              src=""
+              alt=""
+          /></a>
+        </div>
+      --></section>
       <!-- end. portfolio-gallery-->
     </section>
     <!-- end .portfolio-container-->
