Added two images, and changed text

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
           src="Img/20210920 Osipow John Digital Perspective Project.jpg"
           alt="Looking over an unknown horizon."
         /> -->
+
+        <!-- Looping Video of me doing "bruh" is here
         <video
           src="video/Look at this thing reencoded.mp4"
           class="hero-video"
@@ -50,15 +52,19 @@
           muted
           loop
         ></video>
+-->
       </section>
       <section class="hero-text-box">
-        <h1 class="hero-heading">Work in progress</h1>
-        <p class="hero-text">Nothing awesome here yet</p>
+        <h1 class="hero-heading">Sir DeathScythe's Beginner Portfolio</h1>
+        <p class="hero-text">
+          Hi and welcome to my proftilio. I am interested in going into
+          Illustration and here is some of the work I've made recently.
+        </p>
       </section>
     </header>
     <!-- Begin Portfolio Gallery-->
     <section class="portfolio-container section-scroll" id="portfolio">
-      <h1>Portfolio</h1>
+      <h1>Floral Photos</h1>
       <section class="portfolio-gallery">
         <div class="gallery-item">
           <a
@@ -151,6 +157,7 @@
         </div>
       </section>
       <!-- end . portfolio-gallery-->
+
       <h1>Foundation Portfolio</h1>
       <section class="portfolio-gallery">
         <div class="gallery-item">
@@ -218,46 +225,43 @@
 
         <!-- Add two images from time at digital class BELOW-->
 
-        <!-- Below is the code for the two new images
         <div class="gallery-item">
           <a
             class="glightbox"
-            href=""
+            href="Img/20210920 Osipow John Digital Perspective Project.jpg"
           >
             <img
               class="gallery-img"
-              src=""
-              alt=""
+              src="Img/20210920 Osipow John Digital Perspective Project.jpg"
+              alt="Shifting Views"
           /></a>
         </div>
 
         <div class="gallery-item">
-          <a
-            class="glightbox"
-            href=""
-          >
+          <a class="glightbox" href="Img/20211018 osipow John Fianl Logos.jpg">
             <img
               class="gallery-img"
-              src=""
-              alt=""
+              src="Img/20211018 osipow John Fianl Logos.jpg"
+              alt="My Logos"
           /></a>
         </div>
-      --></section>
+      </section>
       <!-- end. portfolio-gallery-->
     </section>
     <!-- end .portfolio-container-->
     <!--Begin About Section-->
     <section class="about-container section-scroll" id="about">
       <section class="about-text">
-        <h1>Special ideas originate here</h1>
+        <h1>Special Ideas Originate Here</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque tempora
-          eum repudiandae unde alias mollitia velit hic dicta veritatis. Facilis
-          error molestiae vero corrupti laboriosam.
+          We all have the ability to create a reality that starts off as a
+          dream. It takes time and dedication to find a way to form it into a
+          substance, some form whether it be physical or digital. The first step
+          to take it to imagine.
         </p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores odio
-          deleniti qui culpa omnis doloremque placeat consequuntur?
+          Below is my email and links to my social accounts. Right now I dont
+          have a lot online, but I'm working around to posting things out there.
         </p>
         <p>
           <a href="mailto:jcosipow@student.cia.edu">Email John</a> at
