Added video again

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           alt="Looking over an unknown horizon."
         /> -->
 
-        <!-- Looping Video of me doing "bruh" is here
+        <!-- Looping Video of me doing "bruh" is here-->
         <video
           src="video/Look at this thing reencoded.mp4"
           class="hero-video"
@@ -52,13 +52,12 @@
           muted
           loop
         ></video>
--->
       </section>
       <section class="hero-text-box">
-        <h1 class="hero-heading">Sir DeathScythe's Beginner Portfolio</h1>
+        <h1 class="hero-heading">A Beginner's Portfolio</h1>
         <p class="hero-text">
-          Hi and welcome to my proftilio. I am interested in going into
-          Illustration and here is some of the work I've made recently.
+          I am an artist interested in majoring Illustration and here is some of
+          the work I've made recently.
         </p>
       </section>
     </header>
