Removed the and from hero text

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <section class="hero-text-box">
         <h1 class="hero-heading">A Beginner's Portfolio</h1>
         <p class="hero-text">
-          I am an artist interested in majoring Illustration and here is some of
+          I am an artist interested in majoring Illustration, here is some of
           the work I've made recently.
         </p>
       </section>
