Readded Images to img

--- a/index.html
+++ b/index.html
@@ -227,20 +227,20 @@
         <div class="gallery-item">
           <a
             class="glightbox"
-            href="Img/20210920 Osipow John Digital Perspective Project.jpg"
+            href="img/20210920 Osipow John Digital Perspective Project.jpg"
           >
             <img
               class="gallery-img"
-              src="Img/20210920 Osipow John Digital Perspective Project.jpg"
+              src="img/20210920 Osipow John Digital Perspective Project.jpg"
               alt="Shifting Views"
           /></a>
         </div>
 
         <div class="gallery-item">
-          <a class="glightbox" href="Img/20211018 osipow John Fianl Logos.jpg">
+          <a class="glightbox" href="img/20211018 osipow John Fianl Logos.jpg">
             <img
               class="gallery-img"
-              src="Img/20211018 osipow John Fianl Logos.jpg"
+              src="img/20211018 osipow John Fianl Logos.jpg"
               alt="My Logos"
           /></a>
         </div>
@@ -282,7 +282,7 @@
         </section>
       </section>
       <section class="about-image">
-        <img src="/Img/Identity.jpg" alt="Parts that make me" />
+        <img src="/img/Identity.jpg" alt="Parts that make me" />
       </section>
     </section>
     <script src="js/glightbox.min.js"></script>
