Added datalightbox to last two images

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
           <a
             class="glightbox"
             href="img/20210920 Osipow John Digital Perspective Project.jpg"
+            data-glightbox="title: Shifting Views; description: An Unknown Landscape"
           >
             <img
               class="gallery-img"
@@ -237,7 +238,11 @@
         </div>
 
         <div class="gallery-item">
-          <a class="glightbox" href="img/20211018 osipow John Fianl Logos.jpg">
+          <a
+            class="glightbox"
+            href="img/20211018 osipow John Fianl Logos.jpg"
+            data-glightbox="title: Logos; description: Colored Scythe and B&W Drip"
+          >
             <img
               class="gallery-img"
               src="img/20211018 osipow John Fianl Logos.jpg"
